bag with images solved

--- a/src/app/components/forecast-by-day/forecast-by-day.component.html
+++ b/src/app/components/forecast-by-day/forecast-by-day.component.html
@@ -13,7 +13,7 @@
          </div>
       </div>
       <div class="humidity day-weather">
-         <img src="../../../assets/images/icons/humidity.svg" alt="">
+         <img [src]="getImg('./assets/images/icons/humidity.svg')" alt="">
          <div class="info">
             <p class="subtitle">Average humidity</p>
             <p>{{day.avghumidity}}%</p>
