--- a/src/app/pages/forecast/forecast.component.scss
+++ b/src/app/pages/forecast/forecast.component.scss
@@ -12,11 +12,9 @@
    .top {
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: flex-start;
 
       .location {
-         margin-bottom: 7px;
-
          display: flex;
          gap: 5px;
          align-items: center;
@@ -33,6 +31,8 @@
          height: 15px;
          cursor: pointer;
          font-size: 1.7em;
+         flex: 0 0 10%;
+         text-align: right;
       }
    }
 
