bag with delte solved

--- a/src/app/components/forecast-by-day/forecast-by-day.component.html
+++ b/src/app/components/forecast-by-day/forecast-by-day.component.html
@@ -6,7 +6,7 @@
       <div class="temp day-weather">
          <div>
             <div class="minmax">
-               Max <span>{{day.maxtemp}}°</span>/Min <span>{{day.mintemp}}°</span>
+               Max <span>{{day.maxtemp}}°</span> Min <span>{{day.mintemp}}°</span>
             </div>
             <p class="subtitle">Average temperature</p>
             <p class="avg-temp">{{day.avgtemp}}°</p>
